# Parent-AI-Safety

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md
docs/architecture/: OVERVIEW.md
examples/: basic_usage.py
src/parent_ai_safety/: __init__.py
src/parent_ai_safety/controls/: __init__.py  access.py  limits.py
src/parent_ai_safety/core/: __init__.py  ai_wrapper.py  filter.py  policy.py
src/parent_ai_safety/monitoring/: __init__.py  activity.py  audit.py
src/tests/: __init__.py  conftest.py
src/tests/core/: test_policy.py
tests/core/: test_filter.py
